test_suite/tests/errors/transition_guard_missing_semicolon.rs
use banish::banish;

fn main() {
    let x = true;
    banish! {
        @foo
            step? { => @foo if x }
    }
}